--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "primereact": "^8.0.0-rc.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "sass": "^1.49.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
