--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "generate-react-cli": "^7.1.0",
+    "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
     "primereact": "^8.0.0-rc.1",
     "react": "^18.0.0",
