--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "generate-react-cli": "^7.1.0",
+    "json-server": "^0.17.0",
     "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
     "primereact": "^8.0.0-rc.1",
@@ -24,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch src/data/server-sample.json --port 4000"
   },
   "eslintConfig": {
     "extends": [
