--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
+    "formik": "^2.2.9",
     "generate-react-cli": "^7.1.0",
     "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
